@@ -13,6 +13,7 @@ New in this Isabelle version
 with demo documents in the regular Isabelle "doc" space:
 
   - Easychair as session "Demo_Easychair" / doc "demo_easychair"
+  - EPTCS as session "Demo_EPTCS" / doc "demo_eptcs"
   - FoilTeX as session "Demo_FoilTeX" / doc "demo_foiltex"
   - Dagstuhl LIPIcs style as session "Demo_LIPIcs" / doc "demo_lipics"
   - Springer LaTeX LNCS style as session "Demo_LLNCS" / doc "demo_llncs"
